--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div style="margin-top:100px; text-align:center">
         <img id="rockImg" src="images/rock.png" alt="iRock" style="cursor:pointer" />
     </div>
-     <script src="js/iRock.js" type="text/javascript"></script>
+    ""<script src="js/iRock.js" type="text/javascript"></script>
 </body>
 
 </html>
