--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <div style="margin-top:100px; text-align:center">
         <img id="rockImg" src="images/rock.png" alt="iRock" style="cursor:pointer" />
+        <script src="js/iRock.js" type="text/javascript"></script>
     </div>
-    ""<script src="js/iRock.js" type="text/javascript"></script>
+    
 </body>
 
 </html>
